--- a/2141019161_TASK4/index.html
+++ b/2141019161_TASK4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Papali Priyaratan Sahu | Frontend Developer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure this path is correct -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -22,6 +22,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#github">GitHub</a></li> <!-- Added GitHub link -->
                 </ul>
             </nav>
             <div class="menu-toggle">
@@ -95,6 +96,14 @@
             </div>
         </section>
 
+        <section class="github" id="github"> <!-- New GitHub section -->
+            <div class="container">
+                <h2 class="section-title animate">My GitHub Repository</h2>
+                <p class="animate">Check out my projects and contributions on GitHub:</p>
+                <a href="https://github.com/papali1305/DEMOPP/tree/main/2141019161_TASK4" class="btn btn-primary" target="_blank">View GitHub Repository</a>
+            </div>
+        </section>
+
         <section class="contact" id="contact">
             <div class="container">
                 <h2 class="section-title animate">Get In Touch</h2>
@@ -126,6 +135,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Ensure this path is correct -->
 </body>
 </html>
